fixed: group collapse icon overlaps border on small screens,
https://github.com/kobotoolbox/enketo-express/issues/897

--- a/src/sass/core/_responsive.scss
+++ b/src/sass/core/_responsive.scss
@@ -56,6 +56,10 @@
         line-height: 1.05 * $line-height-base;
     }
 
+    .or-group:not(.or-appearance-no-collapse) > h4 { 
+        margin-left: 8px;
+    }
+
     .main {
         .paper {
             padding: 0 $form-padding $form-padding $form-padding;
@@ -87,6 +91,10 @@
 
     select, textarea {
         width: 100%;
+    }
+
+    .or-group:not(.or-appearance-no-collapse) > h4 { 
+            margin-left: 15px;
     }
 
     .main {
